--- a/admin/css/wpam-admin.css
+++ b/admin/css/wpam-admin.css
@@ -2,3 +2,28 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+div[class*='users_dropdown'] {
+  position: relative;
+  display: inline-block;
+}
+
+div[class*='users_dropdown'] ul {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+div[class*='users_dropdown'] ul li {
+  padding: 12px 16px;
+  list-style: none;
+}
+
+div[class*='users_dropdown'] ul li:hover {
+  background-color: #f1f1f1;
+}
+
+div[class*='users_dropdown'].show ul {
+  display: block;
+}
